新css和加入购物车，和新心愿表

--- a/catalog/view/theme/default/haircare2.html
+++ b/catalog/view/theme/default/haircare2.html
@@ -105,6 +105,7 @@
 										<h2>Fuller Peruvian Virgin Hair </h2>
 		 								<p>Body Wavy</p>
 		 								<span>$15.39</span>
+		 								<p><span>x1</span></p>
 									</div>
 								</a>
 							</li>
@@ -117,6 +118,7 @@
 										<h2>Fuller Peruvian Virgin Hair  </h2>
 		 								<p>Body Wavy</p>
 		 								<span>$15.39</span>
+		 								<p><span>x1</span></p>
 									</div>
 								</a>
 							</li>
@@ -129,6 +131,7 @@
 										<h2>Fuller Peruvian Virgin Hair  </h2>
 		 								<p>Body Wavy</p>
 		 								<span>$15.39</span>
+		 								<p><span>x1</span></p>
 									</div>
 								</a>
 							</li>
@@ -141,6 +144,7 @@
 										<h2>Fuller Peruvian Virgin Hair  </h2>
 		 								<p>Body Wavy</p>
 		 								<span>$15.39</span>
+		 								<p><span>x1</span></p>
 									</div>
 								</a>
 							</li>
@@ -209,8 +213,7 @@
 		<div class="haircare">
 			<div class="content in_content clearfix">
 				<div class="hair_text clearfix">
-					<img class="bnr_img" src="img/jpg/haircare3.jpg"/>
-					
+					<img class="changeimage bnr_img" data-image='img/jpg/haircare3.jpg' data-mimage='img/jpg/yd_haircare3.jpg'  />
 					<div class="text2 clearfix">
 						<div class="left fl clearfix">
 							<p>Author : <span>rebecca</span> / 2018-06-28</p>
@@ -234,10 +237,10 @@
 							tips like How to Wash your Human Hair Weaves Properly
 						</p>
 						<h1>WHAT DO WE NEED ？ </h1>
-						<img src="img/jpg/haircare4.jpg"/>
+						<img class="changeimage bnr_img" data-image='img/jpg/haircare4.jpg' data-mimage='img/jpg/yd_haircare4.jpg'  />
 						<h1>WHAT YOU SHOULD DO:</h1>
-						<img src="img/jpg/haircare5.jpg"/>
-						<h1>HERE WE ALSO TOOK A HAIR VIDEO ,CHECK IT IF YOU WANT:</h1>
+						<img class="changeimage bnr_img" data-image='img/jpg/haircare5.jpg' data-mimage='img/jpg/yd_haircare5.jpg'  />
+						<h1 class="yd_h1">HERE WE ALSO TOOK A HAIR VIDEO ,CHECK IT IF YOU WANT:</h1>
 						
 						<ul class="video_ul clearfix">
 							<li>
@@ -307,7 +310,6 @@
 				            <button type="submit">SUBMIT</button>
 				            <ol class="clearfix">
 				            	<li><a href="###"><img src="img/png/fot_1.png" alt=""></a></li>
-				            	<li><a href="###"><img src="img/png/fot_2.png" alt=""></a></li>
 				            	<li><a href="###"><img src="img/png/fot_3.png" alt=""></a></li>
 				            	<li><a href="###"><img src="img/png/fot_4.png" alt=""></a></li>
 				            </ol>
@@ -382,7 +384,6 @@
 				            <button type="submit">SUBMIT</button>
 				            <ol class="fot_img clearfix">
 				            	<li><a href="###"><img src="img/png/yd_fot1.png" alt=""></a></li>
-				            	<li><a href="###"><img src="img/png/yd_fot2.png" alt=""></a></li>
 				            	<li><a href="###"><img src="img/png/yd_fot3.png" alt=""></a></li>
 				            	<li><a href="###"><img src="img/png/yd_fot4.png" alt=""></a></li>
 				            </ol>
