--- a/catalog/view/theme/default/hairclubs.html
+++ b/catalog/view/theme/default/hairclubs.html
@@ -105,6 +105,7 @@
 										<h2>Fuller Peruvian Virgin Hair </h2>
 		 								<p>Body Wavy</p>
 		 								<span>$15.39</span>
+		 								<p><span>x1</span></p>
 									</div>
 								</a>
 							</li>
@@ -117,6 +118,7 @@
 										<h2>Fuller Peruvian Virgin Hair  </h2>
 		 								<p>Body Wavy</p>
 		 								<span>$15.39</span>
+		 								<p><span>x1</span></p>
 									</div>
 								</a>
 							</li>
@@ -129,6 +131,7 @@
 										<h2>Fuller Peruvian Virgin Hair  </h2>
 		 								<p>Body Wavy</p>
 		 								<span>$15.39</span>
+		 								<p><span>x1</span></p>
 									</div>
 								</a>
 							</li>
@@ -141,6 +144,7 @@
 										<h2>Fuller Peruvian Virgin Hair  </h2>
 		 								<p>Body Wavy</p>
 		 								<span>$15.39</span>
+		 								<p><span>x1</span></p>
 									</div>
 								</a>
 							</li>
@@ -207,15 +211,14 @@
 		<!--内容-->
 		
 			<div class="content in_content hairclub clearfix">
-				<img src="img/jpg/hairclub1.jpg"/>
-				
+				<img class="changeimage bnr_img" data-image='img/jpg/hairclub1.jpg' data-mimage='img/jpg/yd_hairclub1.jpg'  />
 				<h1>HAIR KNOWLEDGE</h1>
 				<p>“Things that you should know from hair business.”</p>
 				<ul class="hair_ul clearfix">
 					<li>
 						<div class="pic_img">
 							<a href="###">
-								<img src="img/jpg/hair1.jpg" alt="" />
+								<img class="changeimage" data-image='img/jpg/hair1.jpg' data-mimage='img/jpg/yd_hair1.jpg'  />
 								<div class="div_p">
 									<p>Something You Should Know Before Buying Human Hair Extensions.</p>
 								</div>
@@ -230,7 +233,7 @@
 					<li>
 						<div class="pic_img">
 							<a href="###">
-								<img src="img/jpg/hair2.jpg" alt="" />
+								<img class="changeimage" data-image='img/jpg/hair2.jpg' data-mimage='img/jpg/yd_hair2.jpg'  />
 								<div class="div_p">
 									<p>	“What is your hair grade?”</p>
 								</div>
@@ -245,7 +248,7 @@
 					<li>
 						<div class="pic_img">
 							<a href="###">
-								<img src="img/jpg/hair3.jpg" alt="" />
+								<img class="changeimage" data-image='img/jpg/hair3.jpg' data-mimage='img/jpg/yd_hair3.jpg'  />
 								<div class="div_p">
 									<p>How to: Choose the Right Hair Length of Human Hair Weaves?</p>
 								</div>
@@ -267,7 +270,7 @@
 					<li>
 						<div class="pic_img">
 							<a href="###">
-								<img src="img/jpg/hair4.jpg" alt="" />
+								<img class="changeimage" data-image='img/jpg/hair4.jpg' data-mimage='img/jpg/yd_hair4.jpg'  />
 								<div class="div_p">
 									<p>How to take care of Human Hair  Extensions?</p>
 								</div>
@@ -282,7 +285,7 @@
 					<li>
 						<div class="pic_img">
 							<a href="###">
-								<img src="img/jpg/hair5.jpg" alt="" />
+								<img class="changeimage" data-image='img/jpg/hair5.jpg' data-mimage='img/jpg/yd_hair5.jpg'  />
 								<div class="div_p">
 									<p>	How to Wash your Human Hair Weaves Properly?</p>
 								</div>
@@ -297,7 +300,7 @@
 					<li>
 						<div class="pic_img">
 							<a href="###">
-								<img src="img/jpg/hair6.jpg" alt="" />
+								<img class="changeimage" data-image='img/jpg/hair6.jpg' data-mimage='img/jpg/yd_hair6.jpg'  />
 								<div class="div_p">
 									<p>How often should you wash your hair?</p>
 								</div>
@@ -340,6 +343,8 @@
 						<img class="bf" src="img/png/bf.png"/>
 					</li>
 				</ul>
+				
+				<a class="view_a" href="###">VIEW MORE&nbsp;&nbsp;&nbsp;></a>
 				
 			</div>
 		</div>
@@ -394,7 +399,6 @@
 				            <button type="submit">SUBMIT</button>
 				            <ol class="clearfix">
 				            	<li><a href="###"><img src="img/png/fot_1.png" alt=""></a></li>
-				            	<li><a href="###"><img src="img/png/fot_2.png" alt=""></a></li>
 				            	<li><a href="###"><img src="img/png/fot_3.png" alt=""></a></li>
 				            	<li><a href="###"><img src="img/png/fot_4.png" alt=""></a></li>
 				            </ol>
@@ -469,7 +473,6 @@
 				            <button type="submit">SUBMIT</button>
 				            <ol class="fot_img clearfix">
 				            	<li><a href="###"><img src="img/png/yd_fot1.png" alt=""></a></li>
-				            	<li><a href="###"><img src="img/png/yd_fot2.png" alt=""></a></li>
 				            	<li><a href="###"><img src="img/png/yd_fot3.png" alt=""></a></li>
 				            	<li><a href="###"><img src="img/png/yd_fot4.png" alt=""></a></li>
 				            </ol>
