--- a/catalog/view/theme/default/hairknow1.html
+++ b/catalog/view/theme/default/hairknow1.html
@@ -105,6 +105,7 @@
 										<h2>Fuller Peruvian Virgin Hair </h2>
 		 								<p>Body Wavy</p>
 		 								<span>$15.39</span>
+		 								<p><span>x1</span></p>
 									</div>
 								</a>
 							</li>
@@ -117,6 +118,7 @@
 										<h2>Fuller Peruvian Virgin Hair  </h2>
 		 								<p>Body Wavy</p>
 		 								<span>$15.39</span>
+		 								<p><span>x1</span></p>
 									</div>
 								</a>
 							</li>
@@ -129,6 +131,7 @@
 										<h2>Fuller Peruvian Virgin Hair  </h2>
 		 								<p>Body Wavy</p>
 		 								<span>$15.39</span>
+		 								<p><span>x1</span></p>
 									</div>
 								</a>
 							</li>
@@ -141,6 +144,7 @@
 										<h2>Fuller Peruvian Virgin Hair  </h2>
 		 								<p>Body Wavy</p>
 		 								<span>$15.39</span>
+		 								<p><span>x1</span></p>
 									</div>
 								</a>
 							</li>
@@ -209,8 +213,7 @@
 		<div class="haircare">
 			<div class="content in_content clearfix">
 				<div class="hair_text clearfix">
-					<img class="bnr_img" src="img/jpg/hairknow1.jpg"/>
-					
+					<img class="changeimage bnr_img" data-image='img/jpg/hairknow1.jpg' data-mimage='img/jpg/yd_hairknow1.jpg'  />
 					<div class="text2 clearfix">
 						<div class="left fl clearfix">
 							<p>Author : <span>rebecca</span> / 2018-06-28</p>
@@ -236,7 +239,7 @@
 							budget before buying your human hair extensions.
 						</p>
 						<h1><span>1</span>GET HIGH QUALITY HAIR EXTENSIONS.</h1>
-						<img src="img/jpg/hairknow2.jpg" alt="" />
+						<img class="changeimage bnr_img" data-image='img/jpg/hairknow2.jpg' data-mimage='img/jpg/yd_hairknow2.jpg'  />
 						<p>
 							When it comes to human hair extensions, high quality is very important . 
 							Human Hair extensions are made from real human hair, virgin hair. 
@@ -249,7 +252,7 @@
 						</p>
 						
 						<h1><span>2</span>DECIDE THE HAIR LENGTH ANFD HAIR TEXTURE YOU NEED.</h1>
-						<img src="img/jpg/hairknow3.jpg" alt="" />
+						<img class="changeimage bnr_img" data-image='img/jpg/hairknow3.jpg' data-mimage='img/jpg/yd_hairknow3.jpg'  />
 						<p>
 							Before buying human hair extensions, you need to make sure how long 
 							you want your human  extensions be. Decide the number of inches you 
@@ -340,7 +343,6 @@
 				            <button type="submit">SUBMIT</button>
 				            <ol class="clearfix">
 				            	<li><a href="###"><img src="img/png/fot_1.png" alt=""></a></li>
-				            	<li><a href="###"><img src="img/png/fot_2.png" alt=""></a></li>
 				            	<li><a href="###"><img src="img/png/fot_3.png" alt=""></a></li>
 				            	<li><a href="###"><img src="img/png/fot_4.png" alt=""></a></li>
 				            </ol>
@@ -415,7 +417,6 @@
 				            <button type="submit">SUBMIT</button>
 				            <ol class="fot_img clearfix">
 				            	<li><a href="###"><img src="img/png/yd_fot1.png" alt=""></a></li>
-				            	<li><a href="###"><img src="img/png/yd_fot2.png" alt=""></a></li>
 				            	<li><a href="###"><img src="img/png/yd_fot3.png" alt=""></a></li>
 				            	<li><a href="###"><img src="img/png/yd_fot4.png" alt=""></a></li>
 				            </ol>
