--- a/catalog/view/theme/default/hairknow3.html
+++ b/catalog/view/theme/default/hairknow3.html
@@ -105,6 +105,7 @@
 										<h2>Fuller Peruvian Virgin Hair </h2>
 		 								<p>Body Wavy</p>
 		 								<span>$15.39</span>
+		 								<p><span>x1</span></p>
 									</div>
 								</a>
 							</li>
@@ -117,6 +118,7 @@
 										<h2>Fuller Peruvian Virgin Hair  </h2>
 		 								<p>Body Wavy</p>
 		 								<span>$15.39</span>
+		 								<p><span>x1</span></p>
 									</div>
 								</a>
 							</li>
@@ -129,6 +131,7 @@
 										<h2>Fuller Peruvian Virgin Hair  </h2>
 		 								<p>Body Wavy</p>
 		 								<span>$15.39</span>
+		 								<p><span>x1</span></p>
 									</div>
 								</a>
 							</li>
@@ -141,6 +144,7 @@
 										<h2>Fuller Peruvian Virgin Hair  </h2>
 		 								<p>Body Wavy</p>
 		 								<span>$15.39</span>
+		 								<p><span>x1</span></p>
 									</div>
 								</a>
 							</li>
@@ -209,8 +213,7 @@
 		<div class="haircare">
 			<div class="content in_content clearfix">
 				<div class="hair_text clearfix">
-					<img class="bnr_img" src="img/jpg/hairknow6.jpg"/>
-					
+					<img class="changeimage bnr_img" data-image='img/jpg/hairknow6.jpg' data-mimage='img/jpg/yd_hairknow6.jpg'  />
 					<div class="text2 clearfix">
 						<div class="left fl clearfix">
 							<p>Author : <span>rebecca</span> / 2018-06-28</p>
@@ -234,8 +237,7 @@
 							bundles is enough for a full head, actually it depends on the hair
 							length, texture and fullness.
 						</p>
-						<img src="img/jpg/hairknow7.jpg" alt="" />
-						
+						<img class="changeimage bnr_img" data-image='img/jpg/hairknow7.jpg' data-mimage='img/jpg/yd_hairknow7.jpg'  />
 						<div class="bot clearfix">
 							
 							<h1>LENGTH</h1>
@@ -318,7 +320,6 @@
 				            <button type="submit">SUBMIT</button>
 				            <ol class="clearfix">
 				            	<li><a href="###"><img src="img/png/fot_1.png" alt=""></a></li>
-				            	<li><a href="###"><img src="img/png/fot_2.png" alt=""></a></li>
 				            	<li><a href="###"><img src="img/png/fot_3.png" alt=""></a></li>
 				            	<li><a href="###"><img src="img/png/fot_4.png" alt=""></a></li>
 				            </ol>
@@ -393,7 +394,6 @@
 				            <button type="submit">SUBMIT</button>
 				            <ol class="fot_img clearfix">
 				            	<li><a href="###"><img src="img/png/yd_fot1.png" alt=""></a></li>
-				            	<li><a href="###"><img src="img/png/yd_fot2.png" alt=""></a></li>
 				            	<li><a href="###"><img src="img/png/yd_fot3.png" alt=""></a></li>
 				            	<li><a href="###"><img src="img/png/yd_fot4.png" alt=""></a></li>
 				            </ol>
