--- a/catalog/view/theme/default/my_orderlist.html
+++ b/catalog/view/theme/default/my_orderlist.html
@@ -105,6 +105,7 @@
 										<h2>Fuller Peruvian Virgin Hair </h2>
 		 								<p>Body Wavy</p>
 		 								<span>$15.39</span>
+		 								<p><span>x1</span></p>
 									</div>
 								</a>
 							</li>
@@ -117,6 +118,7 @@
 										<h2>Fuller Peruvian Virgin Hair  </h2>
 		 								<p>Body Wavy</p>
 		 								<span>$15.39</span>
+		 								<p><span>x1</span></p>
 									</div>
 								</a>
 							</li>
@@ -129,6 +131,7 @@
 										<h2>Fuller Peruvian Virgin Hair  </h2>
 		 								<p>Body Wavy</p>
 		 								<span>$15.39</span>
+		 								<p><span>x1</span></p>
 									</div>
 								</a>
 							</li>
@@ -141,6 +144,7 @@
 										<h2>Fuller Peruvian Virgin Hair  </h2>
 		 								<p>Body Wavy</p>
 		 								<span>$15.39</span>
+		 								<p><span>x1</span></p>
 									</div>
 								</a>
 							</li>
@@ -224,6 +228,8 @@
 				</div>
 				
 				<div class="right m_or_det clearfix">
+					<h1>My Orders <a href="###">Order recovery center</a></h1>
+					
 					<ul class="order_ul clearfix">
 						<li class="clearfix">
 							<div class="top clearfix">
@@ -458,7 +464,6 @@
 				            <button type="submit">SUBMIT</button>
 				            <ol class="clearfix">
 				            	<li><a href="###"><img src="img/png/fot_1.png" alt=""></a></li>
-				            	<li><a href="###"><img src="img/png/fot_2.png" alt=""></a></li>
 				            	<li><a href="###"><img src="img/png/fot_3.png" alt=""></a></li>
 				            	<li><a href="###"><img src="img/png/fot_4.png" alt=""></a></li>
 				            </ol>
@@ -533,7 +538,6 @@
 				            <button type="submit">SUBMIT</button>
 				            <ol class="fot_img clearfix">
 				            	<li><a href="###"><img src="img/png/yd_fot1.png" alt=""></a></li>
-				            	<li><a href="###"><img src="img/png/yd_fot2.png" alt=""></a></li>
 				            	<li><a href="###"><img src="img/png/yd_fot3.png" alt=""></a></li>
 				            	<li><a href="###"><img src="img/png/yd_fot4.png" alt=""></a></li>
 				            </ol>
