--- a/catalog/view/theme/default/css/common.css
+++ b/catalog/view/theme/default/css/common.css
@@ -265,7 +265,7 @@ text-align: center; position: absolute;bottom: 10px;}
 	padding: 0 0.2rem;box-sizing: border-box;margin-right: 0.2rem;display: block;float: left;background: transparent;}
 .yd_footer .ul_ydfot .slide_div button{width: 2rem;height: 0.6rem;background: #fff;border-radius: 0.05rem;border: none;
 	font-size: 0.18rem;line-height: 0.6rem;color: #000;}
-.yd_footer .ul_ydfot .slide_div .fot_img{margin-bottom: 0.6rem;}
+.yd_footer .ul_ydfot .slide_div .fot_img{margin-bottom: 0.6rem;clear: both;}
 .yd_footer .ul_ydfot .slide_div .fot_img li{margin-top: 0.3rem;float: left;display: block;margin-right: 0.3rem;}
 .yd_footer .ul_ydfot .slide_div .fot_img li img{width: 0.6rem;height: 0.6rem;}
 .yd_footer p{font-family: san_t; width: 100%;text-align: center;display: block;color: #fff;font-size: 0.18rem;line-height: 0.2rem;padding-bottom: 0.4rem;}
