--- a/catalog/view/theme/default/haircare1.html
+++ b/catalog/view/theme/default/haircare1.html
@@ -105,6 +105,7 @@
 										<h2>Fuller Peruvian Virgin Hair </h2>
 		 								<p>Body Wavy</p>
 		 								<span>$15.39</span>
+		 								<p><span>x1</span></p>
 									</div>
 								</a>
 							</li>
@@ -117,6 +118,7 @@
 										<h2>Fuller Peruvian Virgin Hair  </h2>
 		 								<p>Body Wavy</p>
 		 								<span>$15.39</span>
+		 								<p><span>x1</span></p>
 									</div>
 								</a>
 							</li>
@@ -129,6 +131,7 @@
 										<h2>Fuller Peruvian Virgin Hair  </h2>
 		 								<p>Body Wavy</p>
 		 								<span>$15.39</span>
+		 								<p><span>x1</span></p>
 									</div>
 								</a>
 							</li>
@@ -141,6 +144,7 @@
 										<h2>Fuller Peruvian Virgin Hair  </h2>
 		 								<p>Body Wavy</p>
 		 								<span>$15.39</span>
+		 								<p><span>x1</span></p>
 									</div>
 								</a>
 							</li>
@@ -209,8 +213,7 @@
 		<div class="haircare">
 			<div class="content in_content clearfix">
 				<div class="hair_text clearfix">
-					<img class="bnr_img" src="img/jpg/haircare1.jpg"/>
-					
+					<img class="changeimage bnr_img" data-image='img/jpg/haircare1.jpg' data-mimage='img/jpg/yd_haircare1.jpg'  />
 					<div class="text2 clearfix">
 						<div class="left fl clearfix">
 							<p>Author : <span>rebecca</span> / 2018-05-28</p>
@@ -228,6 +231,9 @@
 					</div>
 					
 					<div class="text3 clearfix">
+						<div class="right fr">
+							<img class="changeimage bnr_img" data-image='img/jpg/haircare2.jpg' data-mimage='img/jpg/yd_haircare2.jpg'  />
+						</div>
 						<div class="left fl">
 							<h1>
 								Good quality hair can last long not only because of the quality 
@@ -239,9 +245,6 @@
 								in order to detangle your hair without breaking it all off, a Looper brush or soft brittle brush 
 								is recommended. It is important to brush extensions as gently as possible to prevent irreversible frizz and damage.
 							</p>
-						</div>
-						<div class="right fr">
-							<img src="img/jpg/haircare2.jpg"/>
 						</div>
 					</div>
 					
@@ -354,7 +357,6 @@
 				            <button type="submit">SUBMIT</button>
 				            <ol class="clearfix">
 				            	<li><a href="###"><img src="img/png/fot_1.png" alt=""></a></li>
-				            	<li><a href="###"><img src="img/png/fot_2.png" alt=""></a></li>
 				            	<li><a href="###"><img src="img/png/fot_3.png" alt=""></a></li>
 				            	<li><a href="###"><img src="img/png/fot_4.png" alt=""></a></li>
 				            </ol>
@@ -429,7 +431,6 @@
 				            <button type="submit">SUBMIT</button>
 				            <ol class="fot_img clearfix">
 				            	<li><a href="###"><img src="img/png/yd_fot1.png" alt=""></a></li>
-				            	<li><a href="###"><img src="img/png/yd_fot2.png" alt=""></a></li>
 				            	<li><a href="###"><img src="img/png/yd_fot3.png" alt=""></a></li>
 				            	<li><a href="###"><img src="img/png/yd_fot4.png" alt=""></a></li>
 				            </ol>
