--- a/catalog/view/theme/default/hairknow2.html
+++ b/catalog/view/theme/default/hairknow2.html
@@ -105,6 +105,7 @@
 										<h2>Fuller Peruvian Virgin Hair </h2>
 		 								<p>Body Wavy</p>
 		 								<span>$15.39</span>
+		 								<p><span>x1</span></p>
 									</div>
 								</a>
 							</li>
@@ -117,6 +118,7 @@
 										<h2>Fuller Peruvian Virgin Hair  </h2>
 		 								<p>Body Wavy</p>
 		 								<span>$15.39</span>
+		 								<p><span>x1</span></p>
 									</div>
 								</a>
 							</li>
@@ -129,6 +131,7 @@
 										<h2>Fuller Peruvian Virgin Hair  </h2>
 		 								<p>Body Wavy</p>
 		 								<span>$15.39</span>
+		 								<p><span>x1</span></p>
 									</div>
 								</a>
 							</li>
@@ -141,6 +144,7 @@
 										<h2>Fuller Peruvian Virgin Hair  </h2>
 		 								<p>Body Wavy</p>
 		 								<span>$15.39</span>
+		 								<p><span>x1</span></p>
 									</div>
 								</a>
 							</li>
@@ -206,11 +210,10 @@
 		</div>
 		<!--内容-->
 		
-		<div class="haircare">
+		<div class="haircare hairknow">
 			<div class="content in_content clearfix">
 				<div class="hair_text clearfix">
-					<img class="bnr_img" src="img/jpg/hairknow4.jpg"/>
-					
+					<img class="changeimage bnr_img" data-image='img/jpg/hairknow4.jpg' data-mimage='img/jpg/yd_hairknow4.jpg'  />
 					<div class="text2 clearfix">
 						<div class="left fl clearfix">
 							<p>Author : <span>rebecca</span> / 2018-06-28</p>
@@ -298,7 +301,7 @@
 							collected from young girls or elder women. That’s mean the hair can 
 							last longer or went bad easily.
 						</p>
-						<img src="img/jpg/hairknow5.jpg"/>
+						<img class="changeimage bnr_img" data-image='img/jpg/hairknow5.jpg' data-mimage='img/jpg/yd_hairknow5.jpg'  />
 						<p class="img_p">
 							Next time when supplier selling you a very high grade hair but with a very
 							questionable cheap price, you should be careful, that might not be the 
@@ -362,7 +365,6 @@
 				            <button type="submit">SUBMIT</button>
 				            <ol class="clearfix">
 				            	<li><a href="###"><img src="img/png/fot_1.png" alt=""></a></li>
-				            	<li><a href="###"><img src="img/png/fot_2.png" alt=""></a></li>
 				            	<li><a href="###"><img src="img/png/fot_3.png" alt=""></a></li>
 				            	<li><a href="###"><img src="img/png/fot_4.png" alt=""></a></li>
 				            </ol>
@@ -437,7 +439,6 @@
 				            <button type="submit">SUBMIT</button>
 				            <ol class="fot_img clearfix">
 				            	<li><a href="###"><img src="img/png/yd_fot1.png" alt=""></a></li>
-				            	<li><a href="###"><img src="img/png/yd_fot2.png" alt=""></a></li>
 				            	<li><a href="###"><img src="img/png/yd_fot3.png" alt=""></a></li>
 				            	<li><a href="###"><img src="img/png/yd_fot4.png" alt=""></a></li>
 				            </ol>
